/*
 * $Id: ChangeLog,v 1.1303 2003/07/27 20:15:09 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-29 18:10 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/set.c
    ! in hb_setInitialize() hb_set.HB_SET_DEBUG = TRUE; changed to
      hb_set.HB_SET_DEBUG = hb_dynsymFind( "__DBGENTRY" ) ? TRUE : FALSE;
      to avoid problem with linking debugger when user have to call ALTD(0)
      for using K_ALT_D and K_ALT_DOWN.
      It's a work around and I still vote to move ALTD() function from
      lib debug to libvm or librtl

  * xharbour/source/vm/macro.c
    ! bug in TYPE( "FUNC(ALIAS->FIELD)" ) fixed. if FUNC, ALIAS and
      FIELD exist TYPE should return "UI" not "U"

  * xharbour/contrib/libct/color.prg
    ! bug in ntocolor(0) fixed

2003-07-27 22:13 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/memvars.c
  * source/vm/thread.c
    ! Support for memvars reduced to a "working" test for windows.
      Possibly, don't use memvars, and avoid macros, under MT.

2003-07-27 16:59 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * include/thread.h
  * source/vm/memvars.c
  * source/vm/thread.c
    ! Support for multithreading dynsym added. Now, PHB_DYNS->hMemvar
      member points to a middle-level strucuture (hMemvars) in the
      thread's private stack under MT. This avoid clashes between
      threads; both private and public memvars are now local to the
      thread that uses them.
    % Implementation of MT in memvars.c has been beautified by removing
      almost all ifdef MT sections, and using the standard conversion
      s_SingleThread --> HB_VM_STACK.multiThread if MT is on.

2003-07-26 18:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rdd/nulsys/nulsys.prg
    ! Fixed few typos.
